--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 Athaliana_167_TAIR9.fa
 *.nbc
 /__pycache__
+src/__pycache__
 /build
 .DS_Store
 *.prof
@@ -10,4 +11,5 @@ Athaliana_167_TAIR9.fa
 *.html
 *.dat
 *.mask
+.vscode
 
